--- a/dev-assets/06-components/_heading.scss
+++ b/dev-assets/06-components/_heading.scss
@@ -1,5 +1,5 @@
 .c-heading {
-    color: $blue-text;
+    color: $gray-very-dark;
     line-height: $line-height-sm;
     letter-spacing: $letter-spacing-condensed;
     margin-bottom: $grid-base / 2;
