--- a/prod-assets/style.css
+++ b/prod-assets/style.css
@@ -585,6 +585,53 @@ a {
   .t-promoted__code .c-btn {
     margin-left: 20px; }
 
+.t-newsletter {
+  background-color: #F2F3F5;
+  padding-bottom: 45px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 45px; }
+  @media (min-width: 1200px) {
+    .t-newsletter {
+      padding-left: 70px;
+      padding-right: 70px; } }
+  .t-newsletter__wrapper {
+    display: flex;
+    flex-wrap: wrap; }
+  .t-newsletter__info {
+    width: 100%;
+    margin-bottom: 30px; }
+    @media (min-width: 1200px) {
+      .t-newsletter__info {
+        margin-bottom: 0;
+        width: 45%; } }
+  .t-newsletter__form {
+    width: 100%; }
+    @media (min-width: 1200px) {
+      .t-newsletter__form {
+        width: 55%; } }
+  .t-newsletter__heading {
+    display: block;
+    font-size: 1.125rem;
+    font-weight: bold; }
+  .t-newsletter__heading {
+    display: block;
+    font-size: 1.125rem;
+    font-weight: bold;
+    margin-bottom: 5px; }
+  .t-newsletter__subheading {
+    display: block;
+    font-size: 0.75rem; }
+  .t-newsletter__input {
+    width: auto; }
+    @media (min-width: 800px) {
+      .t-newsletter__input {
+        width: 72%; } }
+  .t-newsletter__submit {
+    border-radius: 0 5px 5px 0;
+    padding: .7rem 1.75rem;
+    margin-left: -2px; }
+
 .u-bg-white {
   background-color: #FFFFFF; }
 
