--- a/dev-assets/07-templates/_site-footer.scss
+++ b/dev-assets/07-templates/_site-footer.scss
@@ -1,64 +1,25 @@
 .t-site-footer {
-    padding-left: $gutter;
-    padding-right: $gutter;
+    background-color: $gray-very-dark;
 
     & .o-row {
-        padding-bottom: $grid-base * 4;
-        padding-top: $grid-base * 5;  
+        padding-bottom: $grid-base * 1.5;
+        padding-top: $grid-base * 4;  
     }
 
     &__item {
-        flex-basis: auto;
-        padding-left: $gutter;
+        margin-bottom: $grid-base * 3;
 
-        &:first-child {
-            @include medium-up {
-                width: 28%;
-            }
-        }
-
-        &:nth-child(2) {
-            @include medium-up {
-                width: 28%;
-            }
-        }
-
-        &:nth-child(3) {
-            @include medium-up {
-                width: 25%;
-            }
-        }
-
-        &:nth-child(4) {
-            @include medium-up {
-                width: 15%;
-            }
+        @include large-up {
+            margin-bottom: 0;
         }
     }
 
-    &__heading {
-        align-items: center;
-        display: flex;
-        height: $grid-base * 6;
+    &__address {
+        padding-right: $grid-base * 6;
     }
 
-    &__text-heading {
-        color: $gray-dark;
-    }
-
-    &__adress {
-        padding-top: $grid-base * 2;
-    }
-
-    &__label {
-        display: block;
-        font-size: $font-size-5;
-        margin-bottom: $grid-base * 1;
-    }
-
-    &__contact-item {
-        line-height: $line-height-lg;
-        margin-bottom: $grid-base * 2;
+    &__info {
+        line-height: 2;
     }
 
     &__copy {
@@ -66,7 +27,57 @@
         padding-top: $grid-base * 2.5;
     }
 
-    &__copy-text {
+    &__item-last {
+        width: 290px;
+
+        @include large-up {
+            margin-left: $grid-base * 7.5;
+        }
+    }
+
+    &__text {
+        color: $white;
+        display: block;
         font-size: $font-size-7;
+        margin-bottom: $grid-base * 2;
+    }
+
+    &__link {
+        color: $white;
+        display: block;
+        font-size: $font-size-7;
+        margin-bottom: $grid-base * 1.2;
+
+        &:hover {
+            color: $white;
+        }
+    }
+
+    &__links {
+        display: flex;
+    }
+
+    &__links-first {
+        width: 55%;
+    }
+
+    &__links-second {
+        width: 45%;
+    }
+
+    &__instagrams {
+        margin-bottom: $grid-base * 1.5;
+    }
+
+    &__instagram {
+        margin-right: 3px;
+    }
+
+    &__copy {
+        background-color: $gray-light;
+        color: $gray-very-dark;
+        padding-bottom: $grid-base * 2.5;
+        padding-top: $grid-base * 2.5;
+        font-size: $font-size-9;
     }
 }
